Fix: Firefox layout bugs and responsiveness issues fix

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@
   --font-paragraph: "ProximaNova, sans-serif";
 }
 
+* {
+  backface-visibility: hidden;
+}
+
 html,
 body {
   margin: 0;
